[package]
name = "endure"
version = "0.0.0-git"
edition = "2021"
authors = ["Marcin Siodelski <msiodelski@gmail.com>"]
description = "DHCP diagnostics utility"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
ctrlc = "3.2.5"
pcap = "1.2.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.40"
simple_moving_average = "1.0.1"
chrono = { version = "0.4.33", features = ["serde"] }
