workspace = { members = ["endure-lib", "endure-macros"] }
[package]
name = "endure"
version = "0.4.0"
edition = "2021"
authors = ["Marcin Siodelski <msiodelski@gmail.com>"]
description = "DHCP diagnostics utility"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endure-lib = { path = "endure-lib" }
endure-macros = { path = "endure-macros" }
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
pcap = { version = "1.2.0", features = ["capture-stream"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.40"
simple_moving_average = "1.0.1"
chrono = { version = "0.4.33", features = ["serde"] }
prometheus-client = "0.22.1"
actix-web = "4.5.1"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }
actix-web-lab = "0.20.2"
tokio-stream = "0.1.14"
libc = "0.2.153"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_json = "0.1.0"
assert_matches = "1.5.0"
predicates = "3.1.0"
rstest = "0.25.0"
tempdir = "0.3.7"

