[package]
name = "endure-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
pcap = "1.2.0"
thiserror = "1.0.40"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
libc = "0.2.153"
