[package]
name = "endure-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.77"
chrono = "0.4.35"
futures = "0.3.30"
pcap = { version = "1.2.0", features = ["capture-stream"] }
thiserror = "1.0.40"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
libc = "0.2.153"
predicates = "3.1.0"
