[package]
name = "endure-lib"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.35", features = ["serde"] }
csv = "1.3.0"
endure-macros = { path = "../endure-macros" }
futures = "0.3.30"
libc = "0.2.153"
pcap = { version = "1.2.0", features = ["capture-stream"] }
prometheus-client = "0.22.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.40"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
assert_json = "0.1.0"
predicates = "3.1.0"
csv = "1.3.0"
